// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CourseCardActions snapshot show begin course button when verified and not entitlement and has started 1`] = `
<ActionRow
  data-test-id="CourseCardActions"
>
  <BeginCourseButton
    cardId="cardId"
  />
</ActionRow>
`;

exports[`CourseCardActions snapshot show resume button when verified and not entitlement and has started 1`] = `
<ActionRow
  data-test-id="CourseCardActions"
>
  <ResumeButton
    cardId="cardId"
  />
</ActionRow>
`;

exports[`CourseCardActions snapshot show select session button when not verified and entitlement 1`] = `
<ActionRow
  data-test-id="CourseCardActions"
>
  <SelectSessionButton
    cardId="cardId"
  />
</ActionRow>
`;

exports[`CourseCardActions snapshot show upgrade button when not verified and not entitlement 1`] = `
<ActionRow
  data-test-id="CourseCardActions"
>
  <UpgradeButton
    cardId="cardId"
  />
  <BeginCourseButton
    cardId="cardId"
  />
</ActionRow>
`;

exports[`CourseCardActions snapshot show view course button when not verified and entitlement and fulfilled 1`] = `
<ActionRow
  data-test-id="CourseCardActions"
>
  <ViewCourseButton
    cardId="cardId"
  />
</ActionRow>
`;
